<resources>
    <string name="app_name">weather app</string>
    <string name="today">Today</string>
    <string name="date">date</string>
    <string name="weather">weather</string>
    <string name="city">city</string>
    <string name="temp_high">High:00º</string>
    <string name="temp_low">Low:00º</string>
    <string name="temp">\00º</string>
    <string name="image_weather">image weather</string>
    <string name="data_chance_rain">00%</string>
    <string name="data_wind_speed">00 km/h</string>
    <string name="data_humidity">00%</string>
    <string name="rain">Rain</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humanity">Humanity</string>
    <string name="ERROR_UNEXPECTED">Error unexpected</string>
    <string name="next_7_day">Next 7 Day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="powered">Powered by AccuWeather</string>
    <string name="settings">Configurações</string>
    <string name="data">Dados</string>
    <string name="time_format">Formato de hora</string>
    <string name="title_modal_spinner">Title</string>
    <string name="option_1">option 1</string>
    <string name="option_2">option 2</string>


    <string-array name="format_time">
        <item>12h</item>
        <item>24h</item>
    </string-array>
</resources>